nginxproxy/ghost.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      #- image: mhowlett/ngx-stub-status-prometheus 
      - image: nginx:1.11
        imagePullPolicy: Always
        name: ghost
        ports:
        - containerPort: 80
